--- a/package.json
+++ b/package.json
@@ -15,18 +15,23 @@
     "@types/react": "18.2.20",
     "@types/react-dom": "18.2.7",
     "autoprefixer": "10.4.15",
+    "date-fns": "^2.30.0",
     "eslint": "8.47.0",
     "eslint-config-next": "13.4.17",
     "next": "13.4.17",
     "next-auth": "^4.23.1",
     "postcss": "8.4.28",
     "react": "18.2.0",
+    "react-currency-input-field": "^3.6.11",
+    "react-datepicker": "^4.16.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.10.1",
+    "tailwind-merge": "^1.14.0",
     "tailwindcss": "3.3.3",
     "typescript": "5.1.6"
   },
   "devDependencies": {
+    "@types/react-datepicker": "^4.15.0",
     "prettier": "^3.0.2",
     "prisma": "^5.1.1"
   }
