--- a/package.json
+++ b/package.json
@@ -8,10 +8,13 @@
     "start": "next start",
     "lint": "next lint"
   },
+  "prisma": {
+    "seed": "ts-node --compiler-options {\"module\":\"CommonJS\"} src/lib/seed.ts"
+    
+  },
   "dependencies": {
     "@auth/prisma-adapter": "^1.0.1",
     "@prisma/client": "^5.1.1",
-    "@types/node": "20.5.0",
     "@types/react": "18.2.20",
     "@types/react-dom": "18.2.7",
     "autoprefixer": "10.4.15",
@@ -27,12 +30,14 @@
     "react-dom": "18.2.0",
     "react-icons": "^4.10.1",
     "tailwind-merge": "^1.14.0",
-    "tailwindcss": "3.3.3",
-    "typescript": "5.1.6"
+    "tailwindcss": "3.3.3"
   },
   "devDependencies": {
+    "@types/node": "^20.5.3",
     "@types/react-datepicker": "^4.15.0",
     "prettier": "^3.0.2",
-    "prisma": "^5.1.1"
+    "prisma": "^5.1.1",
+    "ts-node": "^10.9.1",
+    "typescript": "^5.1.6"
   }
 }
