--- a/package.json
+++ b/package.json
@@ -10,7 +10,6 @@
   },
   "prisma": {
     "seed": "ts-node --compiler-options {\"module\":\"CommonJS\"} src/lib/seed.ts"
-    
   },
   "dependencies": {
     "@auth/prisma-adapter": "^1.0.1",
@@ -25,6 +24,7 @@
     "next-auth": "^4.23.1",
     "postcss": "8.4.28",
     "react": "18.2.0",
+    "react-country-flag": "^3.1.0",
     "react-currency-input-field": "^3.6.11",
     "react-datepicker": "^4.16.0",
     "react-dom": "18.2.0",
